add month summary in order to be displayed on frontend